{
    "name": "GameplayControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "2ad43662-3feb-495f-aa94-a72cf27a8de2",
            "actions": [
                {
                    "name": "SwordAngle",
                    "type": "Value",
                    "id": "ea0ebc1b-614c-40aa-8617-977f3cd86f71",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Unsheathe",
                    "type": "PassThrough",
                    "id": "5d1a124c-3ce0-4e74-ba96-d597ff5030bd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "BlockButtonLeft",
                    "type": "PassThrough",
                    "id": "ad2ed90e-bbbd-4e10-9b1d-da64921ae152",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "BlockButtonRight",
                    "type": "PassThrough",
                    "id": "f0f51208-706e-4519-ac55-3ea20dd7f47a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MousePos",
                    "type": "Value",
                    "id": "39baa6a0-606b-4f77-b5c6-76ba86413d6d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SwordControllerAngle",
                    "type": "Value",
                    "id": "f275c542-6ad1-464d-aa53-5f0d295cc698",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftHandSwordIdentify",
                    "type": "PassThrough",
                    "id": "7d9a55c3-d599-40bd-b04b-9f50ec5f3ea0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ExhibitionReset",
                    "type": "Button",
                    "id": "32f1f98b-e7d2-4f31-9e4e-ff26ff2aff5d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ExhibitionInvertAim",
                    "type": "Button",
                    "id": "01f575f8-3eaa-480b-b263-17e97cf689f9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ExhibitionSkipLoop",
                    "type": "Button",
                    "id": "3884bd2a-486b-4071-84ec-ed475181d80b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "99483b3e-11d8-47ec-a260-aeeb56d24426",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwordAngle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4344aec1-7de0-4426-92a9-9583499d8a68",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwordAngle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c1d47cf3-9b37-4257-8024-c069bdbf27a6",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Unsheathe",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6cdb655c-1a07-4c72-b407-d84c9e59730b",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Unsheathe",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4b2298b-667c-4e6d-801f-527983685a04",
                    "path": "<HID::Arduino LLC Arduino Leonardo>/button2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Unsheathe",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dea5f0da-62f0-4c16-8ca9-5d6257331376",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Unsheathe",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a4b05b91-8125-4a16-b13c-d6272e156615",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Unsheathe",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8e7e121c-b331-4fee-b77c-408fcf841155",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Unsheathe",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6b4bc36a-da1f-4fa4-bf75-513c8bc65123",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BlockButtonLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "947fe3b9-3c9f-4ae7-aa10-f1f0e31b9fad",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BlockButtonLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "facdcd29-7bb2-4d71-b1bd-24af050fe74c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BlockButtonLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7a427325-233c-4d50-9742-7095554c5d87",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BlockButtonLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dbbbf330-b468-4c38-8e69-552de2b5863d",
                    "path": "<HID::Arduino LLC Arduino Leonardo>/button3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BlockButtonLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7c22fc1a-4f8c-48bd-b73f-fd17758c444d",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BlockButtonLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b023dbd5-7153-4450-a3da-c37d1394e4fb",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BlockButtonRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "057cbf27-c811-460b-a77b-9bb162c2cfbf",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BlockButtonRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "60b09323-39a5-44ca-bc1b-377fcf7d1f5a",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BlockButtonRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "54fbbef0-de2a-4714-93b9-f890ce7d0815",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BlockButtonRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "54b24085-4bc3-4ec8-b1f9-c027d96129b0",
                    "path": "<HID::Arduino LLC Arduino Leonardo>/button4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BlockButtonRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4acc4df5-fea3-4ce9-b1e7-1dffed7b048b",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BlockButtonRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e5428307-9e26-4ca5-b31f-d56d7ba965a8",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "499313bc-3f1c-4f5a-9a8a-91af1081e6c0",
                    "path": "<HID::Arduino LLC Arduino Leonardo>/stick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwordControllerAngle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e1677bae-9874-4f5f-b87e-b07a7b50147e",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ExhibitionReset",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e89a0ace-eed6-4a8a-bfda-591335330069",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ExhibitionInvertAim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c1df739-4ae8-459d-b1e5-8119ddbb6d0c",
                    "path": "<HID::Arduino LLC Arduino Leonardo>/button5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftHandSwordIdentify",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d973adc9-57ad-498d-bbd9-4bda4a8724bd",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ExhibitionSkipLoop",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Gameplay",
            "bindingGroup": "Gameplay",
            "devices": []
        }
    ]
}